--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@
 [metadata]
 url = https://github.com/Bezunca/DataBaker
 name = data_baker
-version = 0.0.1
+version = 0.0.3
 license = LicenseRef-Proprietary
 keywords =
     data
@@ -30,7 +30,7 @@ long_description_content_type = text/markdown; charset=UTF-8
 
 [options]
 # str
-packages = find:
+packages = find_namespace:
 #   Indicates which packages should be included in this module
 #   find: and find_namespace: will automatically find all packages
 # bool
@@ -76,6 +76,8 @@ console_scripts =
 # Custom options for automatic package search
 [options.packages.find]
 # list-semi
+include =
+    data_baker.*
 exclude =
     tests
 
