Fix build  - Complete Dockerfile rework, NO MORE HACKS  - Fix setup.cfg incorrectly using namespace config

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,8 @@ version = 0.0.3
 license = LicenseRef-Proprietary
 keywords =
     data
-    baking
     baker
+    baking
     pre-process
 author = Raphael C. Almeida
 author_email = raphaelpda140@gmail.com
@@ -30,7 +30,7 @@ long_description_content_type = text/markdown; charset=UTF-8
 
 [options]
 # str
-packages = find_namespace:
+packages = find:
 #   Indicates which packages should be included in this module
 #   find: and find_namespace: will automatically find all packages
 # bool
@@ -44,10 +44,6 @@ setup_requires =
 # str
 python_requires = ~=3.8
 #   Define the required python interpreter version to run you package
-# list-comma
-# eager_resources =
-#   List of strings naming resources that should also be extracted from the zip
-#   Only useful should the project be installed from a zipfile
 # list-semi
 install_requires =
     importlib_metadata
@@ -58,10 +54,6 @@ install_requires =
 include_package_data = False
 #   Automatically include in your package any data file declared inside MANIFEST.in
 #   If possible, it is recommended to use package_data and exclude_package_data instead
-
-# Put data files outside package (This section requires setuptools >= 40.5.0)
-# [options.data_files]
-#  install_location = files_path, ...
 
 # Define executable entry-points to this package
 [options.entry_points]
@@ -76,8 +68,6 @@ console_scripts =
 # Custom options for automatic package search
 [options.packages.find]
 # list-semi
-include =
-    data_baker.*
 exclude =
     tests
 
@@ -97,10 +87,6 @@ docs =
 # list-semi
 tests =
 #   TODO: Add your tests dependencies
-
-# Remove data files from inside package
-# [options.exclude_package_data]
-#  package_name = files_pattern, ...
 
 [venv]
 extras =
